--- a/index.html
+++ b/index.html
@@ -232,6 +232,13 @@
                         <button class="btn-primary" id="addProductBtn">
                             <i class="fas fa-plus"></i> إضافة منتج
                         </button>
+                        <button class="btn-secondary" id="exportProductsBtn">
+                            <i class="fas fa-file-excel"></i> تصدير
+                        </button>
+                        <label class="btn-secondary file-upload-btn" style="margin:0; cursor:pointer;">
+                            <i class="fas fa-file-import"></i> استيراد
+                            <input type="file" id="importProductsInput" accept=".xlsx, .xls" style="display:none;">
+                        </label>
                     </div>
                     <div class="filter-bar">
                         <input type="text" id="productSearch" placeholder="بحث عن منتج..." class="filter-input">
